docs(runtime): align post-adoption regression contract