@@ -1,6 +1,6 @@
 # Qualification des flags JVM runtime
 
-Ce document décrit la qualification NXA7-P3 suivie par #152 et la décision d'adoption issue des mesures exact-head.
+Ce document décrit la qualification NXA7-P3 suivie par #152, la décision d'adoption issue des mesures exact-head et le contrat de régression conservé après adoption.
 
 ## Warnings de départ
 
@@ -9,23 +9,22 @@ Sur Java 21, les chemins SQLite/Lucene qualifiés par NEXUS peuvent émettre :
 - `Use --enable-native-access=ALL-UNNAMED` lors d'un appel FFM/JNI depuis le classpath non modulaire ;
 - `Java vector incubator module is not readable` avec la recommandation Lucene `--add-modules jdk.incubator.vector`.
 
-Le scope `ALL-UNNAMED` est évalué parce que les distributions NEXUS actuelles sont des classpath/uber-JARs non modulaires. Il ne doit pas être élargi au-delà de ce que le runtime exige.
+Le scope `ALL-UNNAMED` est retenu parce que les distributions NEXUS actuelles sont des classpath/uber-JARs non modulaires. Il ne doit pas être élargi au-delà de ce que le runtime exige.
 
-## Méthode
+## Qualification historique avant adoption
 
-`.github/workflows/runtime-flags-qualification.yml` sépare deux questions :
+La phase de mesure de #156 séparait deux questions :
 
 1. **contrat fonctionnel des warnings** :
    - `baseline` : aucun flag additionnel ;
    - `tuned` : `--enable-native-access=ALL-UNNAMED` et, si le runtime expose le module, `--add-modules=jdk.incubator.vector` ;
-   - Java 21 / Linux et Java 24 / Windows doivent reproduire les warnings en baseline et les éliminer en tuned sans régression SQLite/Lucene ;
+   - Java 21 / Linux et Java 24 / Windows devaient reproduire les warnings en baseline et les éliminer en tuned sans régression SQLite/Lucene ;
 2. **effet performance du Vector API** :
    - profil A `native-only` : `--enable-native-access=ALL-UNNAMED` ;
    - profil B `native+vector` : même flag native-access + `--add-modules=jdk.incubator.vector` ;
-   - le workload hermétique `ScaleRegressionBenchmarkTest`, `GraphScaleRegressionBenchmarkTest`, `FederatedContextBudgetScaleBenchmarkTest` et `NativeContextDiscoveryBudgetBenchmarkTest` est exécuté quatre fois sur **le même runner Java 21/Linux** dans l'ordre ABBA : `native-a`, `vector-a`, `vector-b`, `native-b` ;
-   - les médianes et ratios Vector/native pour `totalDurationMs` et `graph.p95Ms` sont enregistrés dans `target/runtime-flags/summary.json` ; tous les logs et JSON sont conservés 90 jours.
+   - le workload hermétique `ScaleRegressionBenchmarkTest`, `GraphScaleRegressionBenchmarkTest`, `FederatedContextBudgetScaleBenchmarkTest` et `NativeContextDiscoveryBudgetBenchmarkTest` a été exécuté quatre fois sur **le même runner Java 21/Linux** dans l'ordre ABBA : `native-a`, `vector-a`, `vector-b`, `native-b`.
 
-Le protocole compare `native-only` à `native+vector` afin que l'effet mesuré soit celui du **Vector API uniquement**. L'ABBA same-runner réduit à la fois le bruit inter-machine et le biais d'échauffement.
+Cette phase a produit l'évidence nécessaire avant toute modification des launchers.
 
 ## Qualification fonctionnelle
 
@@ -65,7 +64,8 @@ Le Vector API n'apporte donc pas de bénéfice robuste et univoque sur le worklo
 - JVM enfant MCP qualifiée avec l'agent JaCoCo ;
 - commandes MCP générées pour les assistants ;
 - image Docker, y compris les commandes `docker exec ... java` qui contournent l'entrypoint ;
-- runtime Windows self-contained : `jpackage`, MCP, assistant et REST.
+- runtime Windows self-contained : `jpackage`, MCP, assistant et REST ;
+- intégrations natives produites par le wizard Windows, y compris les formes JSON, TOML et commande directe.
 
 Cette option correspond au classpath non modulaire actuel et supprime le warning native-access qualifié sans élargir la surface au-delà de `ALL-UNNAMED`.
 
@@ -79,6 +79,24 @@ Une future adoption Vector devra être réévaluée si :
 - Lucene/JDK fournit une API non incubateur ou un bénéfice plus net ;
 - une nouvelle qualification same-runner montre un gain stable sans régression des chemins critiques.
 
+## Contrat de régression après adoption
+
+`.github/workflows/runtime-flags-qualification.yml` reste actif après #152 et vérifie désormais le comportement **adopté**, plutôt que de rejouer le protocole pré-adoption comme s'il était encore la production.
+
+Sur Java 21/Linux et Java 24/Windows :
+
+- profil `control` : passe `-Dnexus.runtime.nativeAccessArg=` pour désactiver uniquement l'option NEXUS ; le warning `Use --enable-native-access=ALL-UNNAMED` doit réapparaître, ce qui prouve que le test reste sensible au défaut ;
+- profil `adopted` : utilise la configuration Maven par défaut ; le warning native-access doit être absent ;
+- dans les deux profils, si `jdk.incubator.vector` existe, le warning Vector reste attendu puisque Vector est volontairement non adopté.
+
+Le benchmark ABBA permanent compare ensuite :
+
+- `adopted` : contrat de production par défaut, sans option Vector ;
+- `vector` : même contrat + `--add-modules=jdk.incubator.vector` ;
+- ordre same-runner `adopted-a`, `vector-a`, `vector-b`, `adopted-b`.
+
+Ces nouvelles mesures sont une sentinelle de dérive ; elles ne réécrivent pas rétroactivement la décision historique de #156 sans analyse explicite.
+
 ## Gate de clôture #152
 
 L'adoption native-access n'est considérée terminée qu'après qualification exact-head des surfaces suivantes :
@@ -88,6 +106,6 @@ L'adoption native-access n'est considérée terminée qu'après qualification ex
 - MCP STDIO et JVM enfant ;
 - REST/Quarkus ;
 - Docker distribution ;
-- Windows self-contained installer.
+- Windows self-contained installer et intégrations générées.
 
-Les workflows NEXUS CI, Docker Distribution et Windows Installer constituent les preuves de clôture.
+Les workflows NEXUS CI, Runtime Flags Qualification, Docker Distribution et Windows Installer constituent les preuves de clôture.
